--- a/main.ipynb
+++ b/main.ipynb
@@ -6,20 +6,13 @@
    "metadata": {},
    "source": [
     "# Ames Iowa Statistical Analysis\n",
-    "Pre-processing, exploration (EDA) and statistical analysis of the Ames Iowa Housing Dataset\n",
-    "\n",
-    "This notebook was created in fulfilment of course work 1 for the module details listed below:\n",
+    "Pre-processing, exploration (EDA) and statistical analysis of the Ames Iowa Housing Dataset. This notebook was created in fulfilment of course work 1 for the module details listed below:\n",
     "\n",
     "- Module Code: CS4S767\n",
-    "\n",
     "- Module Title: Data Mining\n",
-    "\n",
     "- Submission Date: 17th November 2025\n",
-    "\n",
     "- Return Date: 19th January 2026\n",
-    "\n",
     "- Module/Leader: Ieuan Griffiths\n",
-    "\n",
     "- Student Name: Morenikeji Elijah Popoola"
    ]
   },
